--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -1,30 +1,39 @@
-.homepage 
-{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px 80px;
-}
-  
-  .directory-menu 
-  {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-  
-  .menu-item 
+.menu-item 
   {
     min-width: 30%;
     height: 240px;
+    //height: 60vh;
     flex: 1 1 auto;
     display: flex;
     align-items: center;
     justify-content: center;
     border: 1px solid black;
     margin: 0 7.5px 15px;
+    background-position: center;
+    background-size: cover;
+    overflow: hidden;
+
+    &:hover 
+    {
+      cursor: pointer;
+    
+      & .background-image 
+      {
+        transform: scale(1.1);
+        transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+      }
+    
+      & .content 
+      {
+        opacity: 0.9;
+      }
+    }
   
+    &.large
+    {
+      height: 60vh;
+    }
+
     &:first-child 
     {
       margin-right: 7.5px;
@@ -33,6 +42,14 @@
     &:last-child 
     {
       margin-left: 7.5px;
+    }
+
+    .background-image
+    {
+      width: 100%;
+      height: 100%;
+      background-position: center;
+      background-size: cover;
     }
   
     .content 
@@ -44,6 +61,9 @@
         align-items: center;
         justify-content: center;
         border: 1px solid black;
+        background: white;
+        opacity: 0.9;
+        position: absolute;
 
         .title 
         {
