--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -31,6 +31,11 @@
       {
         padding: 10px 15px;
         font-family: 'Cookie',cursive;
+
+        &:hover
+        {
+          border-bottom:  2px solid black;
+        }
       }
     }
   }
