--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,16 @@ body
 {
     font-family: 'Open Sans Condensed';
     padding: 20px 60px;
+    background: blanchedalmond;
 }
 
 a
 {
     text-decoration: none;
     color: black;
+}
+
+*
+{
+    box-sizing: border-box;
 }
