Added Cart icon and Cart Dropdwo components

--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -33,5 +33,11 @@
         border: none;
       }
     }
+
+    &.cart-preview-button
+    {
+      background-color: black;
+      color: white;
+    }
   }
   
