--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -5,6 +5,7 @@
     flex-direction: column;
     height: 350px;
     align-items: center;
+    position: relative;
   
     .image 
     {
@@ -15,6 +16,29 @@
       margin-bottom: 5px;
     }
   
+    .custom-button
+    {
+      width: 80%;
+      opacity: 0.8;
+      position: absolute;
+      top: 255px;
+      display: none;
+    }
+
+    &:hover
+    {
+      .image
+      {
+        opacity: 0.8;
+      }
+
+      .custom-button
+      {
+        opacity: 0.85;
+        display: flex;
+      }
+    }
+
     .collection-footer 
     {
       width: 100%;
