--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -14,6 +14,8 @@
     font-weight: bolder;
     border: none;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
   
     &:hover 
     {
@@ -38,6 +40,20 @@
     {
       background-color: black;
       color: white;
+    }
+
+    &.inverted
+    {
+      background-color: white;
+      color: black;
+      border: 1px solid black;
+
+      &:hover
+      {
+        background-color: black;
+        color: white;
+        border: none;
+      }
     }
   }
   
