Created cart-item component and connected our cart dropdown with cartItems reducer

--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -1,7 +1,7 @@
 .cart-dropdown 
 {
-    position: absolute;
-    width: 240px;
+    position: fixed;
+    width: 300px;
     height: 340px;
     display: flex;
     flex-direction: column;
