--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -11,6 +11,12 @@
     top: 90px;
     right: 40px;
     z-index: 5;
+
+    .empty-message
+    {
+      font-size: 18px;
+      margin: 50px auto;
+    }
   
     .cart-items 
     {
