--- a/src/components/checkout/checkout-item.styles.scss
+++ b/src/components/checkout/checkout-item.styles.scss
@@ -28,7 +28,17 @@
   
     .quantity 
     {
-      padding-left: 20px;
+      display: flex;
+
+      .arrow
+      {
+        cursor: pointer;
+      }
+
+      .value
+      {
+        margin: 0 10px;
+      }
     }
   
     .remove-button 
