added global styling and started working on mobile responsiveness

--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -58,5 +58,23 @@
         width: 10%;
       }
     }
-  }
+
+    @media screen and (max-width: 800px)
+    {
+      width: 40vw;
+
+      &:hover
+      {
+        .image
+        {
+          opacity: unset;
+        }
+
+        .custom-button
+        {
+          opacity: unset;
+        }
+      }
+    }
+}
   
