--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -2,7 +2,6 @@
   {
     min-width: 30%;
     height: 240px;
-    //height: 60vh;
     flex: 1 1 auto;
     display: flex;
     align-items: center;
@@ -80,4 +79,8 @@
           }
     }
     
+    @media screen and (max-width: 800px)
+    {
+        max-height: 200px;
+    }
 }
